fix wrapping text in menu

--- a/client/less/ui/menus.less
+++ b/client/less/ui/menus.less
@@ -81,7 +81,7 @@
     display: block;
     position: absolute;
     top: 4.3rem;
-    width: 22rem;
+    width: 26rem;
     padding: 1rem 0;
     left: 0;
     background-color: @ui-select-nav-bg-color;
